# fastapi-todo-app

./: README.md
.claude/: settings.local.json
.claude/skills/: pytest.skill
.claude/skills/docker/: SKILL.md
.claude/skills/docker/references/: anti-patterns.md  compose-patterns.md  dockerfile-patterns.md  optimization-guide.md  registry-workflows.md  security-best-practices.md  troubleshooting.md
.claude/skills/docker/scripts/: analyze-dockerfile.sh  security-scan.sh
.claude/skills/fastapi-builder/: SKILL.md
.claude/skills/fastapi-builder/assets/templates/: .env.example  Dockerfile  docker-compose.yml  hello-world.py  requirements.txt
.claude/skills/fastapi-builder/references/: anti-patterns.md  architecture-patterns.md  database-patterns.md  deployment-guide.md  performance-patterns.md  security-best-practices.md
.claude/skills/fastapi-builder/scripts/: init-project.sh
.claude/skills/pytest/: SKILL.md
.claude/skills/pytest/references/: database-testing.md  fastapi-testing.md  pytest-patterns.md
.claude/skills/sqlmodel/: SKILL.md
.claude/skills/sqlmodel/references/: anti-patterns.md  crud-patterns.md  database-setup.md  model-patterns.md  relationship-patterns.md  schema-patterns.md
.claude/skills/sqlmodel/scripts/: validate_models.py
todo-app/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
todo-app/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  security.py
todo-app/app/routers/: todos.py
todo-app/tests/: conftest.py  test_todos.py
