[project]
name = "todo-app"
version = "0.1.0"
description = "FastAPI Todo application with SQLModel and PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "python-dotenv",
    "pytest",
    "httpx",
]
